# webgpu-msm

./: .eslintignore  .gitignore  DESIGN.md  README.md  package.json  webpack.dev.config.cjs  webpack.prod.config.cjs
src/submission/: .gitignore  Cargo.toml  consts.ts  convert_worker.ts  gpu.ts  gpu_worker.ts  rust-toolchain.toml  submission.ts  utils.test.ts  utils.ts  worker.js  worker_convert.js
src/submission/msm-bin/: Cargo.toml  README.md
src/submission/msm-bin/src/: gpu.rs  main.rs  test.rs
src/submission/msm-macro/: Cargo.toml  README.md
src/submission/msm-macro/src/: lib.rs
src/submission/msm-split/: Cargo.toml  README.md
src/submission/msm-split/src/: lib.rs
src/submission/msm-wasm/: Cargo.toml
src/submission/msm-wasm/src/: lib.rs  split.rs
src/submission/msm-wgpu/: Cargo.toml
src/submission/msm-wgpu/.cargo/: config.toml
src/submission/msm-wgpu/src/: bytes.rs  lib.rs  split.rs  utils.rs
src/submission/msm-wgpu/src/gpu/: bucket.rs  bucket_sum.rs  inter_bucket.rs  intra_bucket.rs  mod.rs  mont.rs
src/submission/msm-wgpu/src/gpu/wgsl/: arith.wgsl  curve.wgsl  entry_bucket.wgsl  entry_bucket_sum.wgsl  entry_from_mont.wgsl  entry_inter_bucket.wgsl  entry_padd.wgsl  entry_padd_idx.wgsl  entry_padd_old.wgsl  entry_to_mont.wgsl  field_modulus.wgsl  test.wgsl  u256.wgsl  validate.ps1
src/submission/rust-msm/: Cargo.toml  LICENSE_MIT
src/submission/rust-msm/src/: lib.rs
src/submission/webgpu/: prune.ts  utils.test.ts  utils.ts
src/submission/webgpu/entries/: entryCreator.ts  pippengerMSMEntry.ts
src/submission/webgpu/wgsl/: Curve.wgsl  Entry.wgsl  EntrySum.wgsl  FieldModulus.wgsl  U256.wgsl
src/submission/wgsl/: arith.wgsl  curve.wgsl  entry_from_mont.wgsl  entry_mont.wgsl  entry_padd_idx.wgsl  validate.ps1
src/ui/: AllBenchmarks.tsx
