[package]
name = "msm-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
num-bigint = { version = "0.4.4", features = ["rand"] }
msm-wgpu = { path = "../msm-wgpu" }
env_logger = "0.11.0"
itertools = "0.12.0"
log = "0.4.20"

wgpu = "0.19.0"
rand = "0.8.5"
bytemuck = "1.14"
flume = "0.11.0"
rand_chacha = "0.3.1"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-ed-on-bls12-377 = "0.4.0"
